--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -146,13 +146,14 @@ a.active {
     width: 100%;
     height: 100%;
     background-repeat: no-repeat;
-    object-fit: cover;
 }
 .corousel-container img {
     position: absolute;
     width: 100%;
     height:100%;
     transition: all .5s linear;
+    object-fit: cover;
+    object-position: center;
 }
 
 .corousel-nav {
