--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -478,7 +478,7 @@ iframe {
 }
 
 .footer-address {
-    color: #EEEEEE;
+    color: #DDEEDF;
     line-height: 1.5;
 }
 
@@ -487,7 +487,7 @@ iframe {
 }
 
 .copyright {
-    color: #EEEEEE;
+    color: #DDEEDF;
     font-size: 0.9rem;
     font-weight: 100;
     text-align: center;
